--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,8 +3,8 @@ spring:
     name: ms-store
   cloud:
     config:
+      uri: http://5.196.95.68:28088
       allow-override: true
-      uri: 5.196.95.68:28088
   jpa:
     hibernate:
       ddl-auto: validate
